--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -400,6 +400,7 @@
 	}
 
 		#header h1 {
+			font-family: 'Anonymous Pro', monospace;
 			font-size: 4.35em;
 			font-weight: 900;
 			letter-spacing: -0.035em;
